--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "primeflex": "^1.3.0",
     "primeicons": "^3.0.0-rc.1",
     "primereact": "^4.2.2",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.1",
