--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
+    "formik": "^2.1.4",
     "history": "^4.10.1",
     "i18next": "^19.5.1",
     "i18next-browser-languagedetector": "^5.0.0",
@@ -21,7 +22,8 @@
     "react-loadable": "^5.5.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-transition-group": "^2.5.1"
+    "react-transition-group": "^2.5.1",
+    "yup": "^0.29.1"
   },
   "scripts": {
     "start": "react-scripts start",
