--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-loadable": "^5.5.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-toastify": "^6.0.8",
     "react-transition-group": "^2.5.1",
     "transition": "^0.1.1",
     "yup": "^0.29.1"
