--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "node-sass": "^4.14.1",
     "primeflex": "^1.3.1",
     "primeicons": "^3.0.0-rc.1",
-    "primereact": "^4.2.2",
+    "primereact": "latest",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
@@ -23,7 +23,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-toastify": "^6.0.8",
-    "react-transition-group": "^2.5.1",
+    "react-transition-group": "^4.4.1",
     "transition": "^0.1.1",
     "yup": "^0.29.1"
   },
