Bugfix data grid, add new model, start change services.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,12 @@
 /.idea/**
 /cs2-admin.iml
 /.idea/
+/.idea/
+/.idea/vcs.xml
+/.idea/misc.xml
+/.idea/workspace.xml
+/.idea/modules.xml
+/.idea/$PRODUCT_WORKSPACE_FILE$
+/.idea/codeStyles/codeStyleConfig.xml
+/.idea/.gitignore
+/.idea/codeStyles/
