--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-toastify": "^6.0.8",
     "react-transition-group": "^4.4.1",
     "transition": "^0.1.1",
-    "yup": "^0.29.1"
+    "yup": "^0.29.1",
+    "sockjs-client": "^1.4.0",
+    "stompjs": "^2.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
