Update primereact to 5.0.1

--- a/package.json
+++ b/package.json
@@ -7,27 +7,27 @@
     "classnames": "^2.2.6",
     "formik": "^2.1.5",
     "history": "^4.10.1",
-    "i18next": "^19.6.3",
-    "i18next-browser-languagedetector": "^5.0.0",
-    "i18next-http-backend": "^1.0.17",
+    "i18next": "^19.7.0",
+    "i18next-browser-languagedetector": "^5.0.1",
+    "i18next-http-backend": "^1.0.19",
     "node-sass": "^4.14.1",
     "primeflex": "^1.3.1",
-    "primeicons": "^3.0.0-rc.1",
-    "primereact": "latest",
+    "primeicons": "^4.0.0",
+    "primereact": "^5.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.1",
-    "react-i18next": "^11.7.0",
+    "react-i18next": "^11.7.2",
     "react-loadable": "^5.5.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-toastify": "^6.0.8",
     "react-transition-group": "^4.4.1",
-    "sockjs-client": "^1.4.0",
+    "sockjs-client": "^1.5.0",
     "stompjs": "^2.3.3",
     "transition": "^0.1.1",
-    "yup": "^0.29.2"
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
